/*
 * SPDX-FileCopyrightText: © Hypermode Inc. <hello@hypermode.com>
 * SPDX-License-Identifier: Apache-2.0
 */

// Style guide for Protocol Buffer 3.
// Use CamelCase (with an initial capital) for message names – for example,
// SongServerRequest. Use underscore_separated_names for field names – for
// example, song_name.

syntax = "proto3";

package api.v2;

option go_package = "github.com/dgraph-io/dgo/v250/protos/api.v2";

option java_package = "io.dgraph.v2";
option java_outer_classname = "DgraphProto";

service Dgraph {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc AllocateIDs(AllocateIDsRequest) returns (AllocateIDsResponse) {}

  rpc SignInUser(SignInUserRequest) returns (SignInUserResponse) {}
  rpc Alter(AlterRequest) returns (AlterResponse) {}
  rpc RunDQL(RunDQLRequest) returns (RunDQLResponse) {}

  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse) {}
  rpc DropNamespace(DropNamespaceRequest) returns (DropNamespaceResponse) {}
  rpc UpdateNamespace(UpdateNamespaceRequest) returns (UpdateNamespaceResponse) {}
  rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {}

  rpc UpdateExtSnapshotStreamingState(UpdateExtSnapshotStreamingStateRequest) returns (UpdateExtSnapshotStreamingStateResponse) {}
  rpc StreamExtSnapshot(stream StreamExtSnapshotRequest) returns (StreamExtSnapshotResponse) {}
}

message PingRequest {}

message PingResponse {
  string version = 1;
}

enum LeaseType {
  NS = 0;
  UID = 1;
  TS = 2;
}

message AllocateIDsRequest {
  uint64 how_many = 1;
  LeaseType lease_type = 2;
}

message AllocateIDsResponse {
  uint64 start = 1;
  uint64 end = 2; // inclusive
}

message SignInUserRequest {
  string user_id = 1;
  string password = 2;
  string refresh_token = 3;
}

message SignInUserResponse {
  string access_jwt = 1;
  string refresh_jwt = 2;
}

message AlterRequest {
  AlterOp op = 1;
  string ns_name = 2;
  string schema = 3;
  bool run_in_background = 4;
  string predicate_to_drop = 5;
  string type_to_drop = 6;
}

message AlterResponse {}

enum AlterOp {
  NONE = 0;
  DROP_ALL = 1;
  DROP_ALL_IN_NS = 2;
  DROP_DATA_IN_NS = 3;
  DROP_PREDICATE_IN_NS = 4;
  DROP_TYPE_IN_NS = 5;
  SCHEMA_IN_NS = 6;
}

enum RespFormat {
  JSON = 0;
  RDF = 1;
}

message RunDQLRequest {
  string ns_name = 1;
  string dql_query = 2;
  map<string, string> vars = 3;
  bool read_only = 4;
  bool best_effort = 5;
  RespFormat resp_format = 6;
}

message RunDQLResponse {
  TxnContext txn = 1;
  bytes query_result = 2; // could be rdf or json
  map<string, string> blank_uids = 3;  // mapping of blank_node => uid in hex
  Latency latency = 4;
  Metrics metrics = 5;
}

message TxnContext {
	uint64 start_ts = 1;
	uint64 commit_ts = 2;
	bool aborted = 3;
	repeated string keys = 4;  // List of keys to be used for conflict detection.
	repeated string preds = 5; // List of predicates involved in this transaction.
	string hash = 6;
}

message Latency {
	uint64 parsing_ns = 1;
	uint64 processing_ns = 2;
	uint64 resp_encoding_ns = 3;
	uint64 assign_timestamp_ns = 4;
	uint64 total_ns = 5;
}

message Metrics {
	// uids_touched is the map of number of uids read for each attribute/predicate.
	map<string, uint64> uids_touched = 1;
}

message CreateNamespaceRequest {
  string ns_name = 1;
}

message CreateNamespaceResponse {}

message DropNamespaceRequest {
  string ns_name = 1;
}

message DropNamespaceResponse {}

message UpdateNamespaceRequest {
  string ns_name = 1;
  string rename_to_ns = 2;
}

message UpdateNamespaceResponse {}

message ListNamespacesRequest {}

message ListNamespacesResponse {
  map<string, Namespace> ns_list = 1;
}

message Namespace {
  string name = 1;
  uint64 id = 2;
}

message UpdateExtSnapshotStreamingStateRequest {
  bool start = 1;
  bool finish = 2;
  bool drop_data = 3;
}

message UpdateExtSnapshotStreamingStateResponse {
  repeated uint32 groups = 1;
}

message StreamExtSnapshotRequest {
  uint32 group_id = 1;
  bool forward = 2;
  StreamPacket pkt = 3;
}

message StreamExtSnapshotResponse {}

message StreamPacket {
  bytes data = 1;
  bool done = 2;
}
